fix wrapping issue

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -137,6 +137,8 @@ color:teal;
 
 .list-shows{
 margin:10px;
+width:1200px;
+padding:0px;
 }
 .detail-header{
 	width:250px;
